--- a/packages/ez_core/pubspec.yaml
+++ b/packages/ez_core/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ez_core
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+HomeView:
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
