--- a/packages/ez_dashboard/pubspec.yaml
+++ b/packages/ez_dashboard/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ez_dashboard
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+HomeView:
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
@@ -11,7 +11,6 @@ dependencies:
   flutter:
     sdk: flutter
   cached_network_image: ^3.2.2
-  auto_route: ^5.0.2
   easy_debounce: ^2.0.2+1
 
 dev_dependencies:
