--- a/packages/ez_onboarding/pubspec.yaml
+++ b/packages/ez_onboarding/pubspec.yaml
@@ -1,7 +1,7 @@
 name: ez_onboarding
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+HomeView:
 
 environment:
   sdk: '>=2.18.2 <3.0.0'
