--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,8 @@ dependencies:
   url_launcher: ^6.1.2
   validators: ^3.0.0
   auto_route: ^5.0.4
+  flutter_colorpicker: ^1.0.3
+  image_cropper: ^3.0.1
 dev_dependencies:
   analyzer: ^5.1.0
   auto_route_generator: ^5.0.3
@@ -102,6 +104,8 @@ dev_dependencies:
     sdk: flutter
   freezed: ^2.0.3
   json_serializable: ^6.1.4
+  
+  
 
 dependency_overrides:
   image_picker_android: 0.8.4+13
