--- a/.json_models/4 digital_card.jsonc
+++ b/.json_models/4 digital_card.jsonc
@@ -3,13 +3,24 @@
   "__path": "/lib/app/models/",
   "id": 1,
   "user_id": 1,
-  "name" : "Mark Dionnie",
+  "owner_id": 1,
   "title" : "Programmer",
-  "company" : "Global Webforce",
-  "image" : "ffff",
+  "logo_image" : "ffff",
   "color" : "",
-  "mobile_number":"09238988128",
+  "profile_image" : "ffff",
+  "prefix" : "Mark Dionnie",
+  "first_name" : "Mark Dionnie",
+  "middle_name" : "Mark Dionnie",
+  "last_name" : "Mark Dionnie",
+  "suffix" : "Mark Dionnie",
+  "short_bio" : "werwrwr",
+  "position" : "Programmer",
+  "company" : "Global Webforce",
   "email": "dionnie_bulingit@yahoo.com",
+  "address": "Pasig",
+  "mobile_number":"09238988128",
+  "website":"www.google.com",
+  "goes_by":"Him/Them",
   "created_at": "2022-11-01T01:51:45.000000Z",
   "updated_at": "2022-11-01T01:51:45.000000Z"
 }
