--- a/packages/ez_dashboard/pubspec.yaml
+++ b/packages/ez_dashboard/pubspec.yaml
@@ -4,19 +4,12 @@ version: 0.0.1
 HomeView:
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: '^2.12.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
   cached_network_image: ^3.2.2
-  easy_debounce: ^2.0.2+1
 
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^2.0.0
-
-flutter:
 
