--- a/packages/ez_onboarding/pubspec.yaml
+++ b/packages/ez_onboarding/pubspec.yaml
@@ -1,10 +1,9 @@
 name: ez_onboarding
 description: A new Flutter package project.
 version: 0.0.1
-HomeView:
 
 environment:
-  sdk: '>=2.18.2 <3.0.0'
+  sdk: '^2.12.0'
   flutter: ">=1.17.0"
 
 dependencies:
@@ -12,11 +11,3 @@ dependencies:
     sdk: flutter
   loop_page_view: ^1.2.0
   page_view_indicators: ^2.0.0
- 
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^2.0.0
-
-flutter:
