--- a/packages/ez_ui/pubspec.yaml
+++ b/packages/ez_ui/pubspec.yaml
@@ -5,7 +5,7 @@ HomeView:
 publish_to: none
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: '^2.12.0'
   flutter: ">=1.17.0"
 
 dependencies:
@@ -18,10 +18,5 @@ dependencies:
   cached_network_image: ^3.2.0
   auto_size_text: ^3.0.0
   
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^1.0.0
 
-flutter:
 
