--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ environment:
 dependencies:
   awesome_select: ^6.0.0
   cached_network_image: ^3.2.0
-  dotted_border: ^2.0.0+2
-  equatable: ^2.0.3
+
+
   ez_core:
     path: ./packages/ez_core
   ez_dashboard:
@@ -43,17 +43,9 @@ dependencies:
   faker: ^2.0.0
   flutter:
     sdk: flutter
-  flutter_form_builder: ^7.7.0
+  
   flutter_keyboard_visibility: ^5.4.0
-  flutter_map: ^3.1.0
   flutter_native_splash: ^2.2.13
-  flutter_staggered_grid_view: ^0.6.2
-  flutter_widget_from_html: ^0.10.0
-  font_awesome_flutter: ^10.3.0
-  form_builder_extra_fields: ^8.3.0
-  form_builder_image_picker: ^3.1.0
-  form_builder_validators: ^8.3.0
-  freezed_annotation: ^2.0.3
   google_fonts: ^4.0.3
   hexcolor: ^3.0.1
   http: ^0.13.4
@@ -61,40 +53,63 @@ dependencies:
   http_parser: ^4.0.1
   image_gallery_saver: ^1.7.1
   image_picker: ^0.8.5+3
-  intl: ^0.17.0
-  json_annotation: ^4.6.0
-  latlong2: ^0.8.1
-  loader_overlay: ^2.1.0
-  logger: ^1.1.0
-  mask_text_input_formatter: ^2.4.0
-  modal_bottom_sheet: ^2.0.1
-  path: ^1.8.2
-  path_provider: ^2.0.11
-  percent_indicator: ^4.0.0
-  permission_handler: ^10.2.0
-  qr_code_scanner: ^1.0.1
 
+  qr_code_scanner: ^1.0.1
   qr_code_tools: ^0.0.7
   qr_flutter: ^4.0.0
-  rename: ^2.0.1
+  touchable: ^1.0.2
   responsive_builder: ^0.6.0
   screenshot: ^1.3.0
-  scrollable_positioned_list: ^0.3.2
   share_plus: ^6.3.0
+  intl: ^0.18.0
+  rename: ^2.0.1
   shared_preferences: ^2.0.13
+  logger: ^1.1.0
+  path: ^1.8.2
+  path_provider: ^2.0.11
+  freezed_annotation: ^2.0.3
+  json_annotation: ^4.6.0
+  validators: ^3.0.0
+  equatable: ^2.0.3
+  url_launcher: ^6.1.2
+  
+#UI
+  font_awesome_flutter: ^10.3.0
+  reactive_forms: ^14.2.0
+  #dotted_border: ^2.0.0+2
+#  flutter_form_builder: ^7.8.0
+  #form_builder_extra_fields: ^8.3.0
+ # form_builder_image_picker: ^3.1.0
+#  form_builder_validators: ^8.5.0
+  flutter_colorpicker: ^1.0.3
+  image_cropper: ^3.0.1
+  loader_overlay: ^2.1.0
+  mask_text_input_formatter: ^2.4.0
+  modal_bottom_sheet: ^2.0.1
+#ROUTING
+  auto_route: ^5.0.4
+#STACKED
   stacked: ^3.1.0+3
   stacked_generator: ^0.9.1+1
   stacked_services: ^0.9.9
   stacked_themes: ^0.3.9
-  string_validator: ^0.3.0
-  timeago: ^3.2.2
-  transparent_image: ^2.0.0
-  url_launcher: ^6.1.2
-  validators: ^3.0.0
-  auto_route: ^5.0.4
-  flutter_colorpicker: ^1.0.3
-  image_cropper: ^3.0.1
-  touchable: ^1.0.2
+  
+  
+  
+  
+  
+#UTILS
+#  string_validator: ^0.3.0
+#  timeago: ^3.2.2
+#  percent_indicator: ^4.0.0
+#  permission_handler: ^10.2.0
+#  flutter_staggered_grid_view: ^0.6.2
+#  flutter_widget_from_html: ^0.10.0
+#  flutter_map: ^3.1.0
+#  transparent_image: ^2.0.0
+#  validators: ^3.0.0
+#  scrollable_positioned_list: ^0.3.2
+#  latlong2: ^0.8.1
 
 
 dev_dependencies:
