--- a/.json_models/4 digital_card.jsonc
+++ b/.json_models/4 digital_card.jsonc
@@ -1,12 +1,12 @@
 {
   "__className": "DigitalCard.model",
   "__path": "/lib/app/models/",
-  "id": 1,
+  "r@id": 1,
   "user_id": 1,
   "owner_id": 1,
   "title" : "Programmer",
   "logo_image" : "ffff",
-  "color" : "",
+  "color" : 1,
   "profile_image" : "ffff",
   "prefix" : "Mark Dionnie",
   "first_name" : "Mark Dionnie",
