--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
     path: ./packages/ez_dashboard
   ez_ui:
     path: ./packages/ez_ui
+
   
   flutter:
     sdk: flutter
@@ -67,7 +68,8 @@ dependencies:
   url_launcher: ^6.1.2
   uuid: ^3.0.7
   faker: ^2.0.0
-  vcard_maintained: ^0.0.1+1
+#  vcard:
+#    git: https://github.com/markbulingit/vcard
 #UI
   font_awesome_flutter: ^10.3.0
   
@@ -81,12 +83,13 @@ dependencies:
   loader_overlay: ^2.1.0
   mask_text_input_formatter: ^2.4.0
   modal_bottom_sheet: ^2.0.1
+  proste_bezier_curve: ^2.0.2
 #ROUTING
   auto_route: ^5.0.4
 #STACKED
-  stacked: ^3.1.0+3
-  stacked_generator: ^0.9.1+1
-  stacked_services: ^0.9.9
+  stacked: ^3.2.0
+  stacked_generator: ^1.0.0
+  stacked_services: ^1.0.0
   stacked_themes: ^0.3.9
 #UTILS
 #  string_validator: ^0.3.0
@@ -103,17 +106,20 @@ dependencies:
   freezed_annotation: ^2.0.3
   json_annotation: ^4.6.0
   reactive_forms: ^14.2.0
-  reactive_forms_annotations: ^0.13.2
+  reactive_forms_annotations: ^1.0.0
   reactive_image_picker: ^0.13.0
+
+  flutter_contacts: ^1.1.6
+
 dev_dependencies:
   build_runner: ^2.3.2
-  reactive_forms_generator: ^0.23.4
+  reactive_forms_generator: ^1.0.0
   freezed: ^2.0.3
   json_serializable: ^6.1.4
   analyzer: ^5.1.0
   auto_route_generator: ^5.0.3
   dependency_validator: ^3.1.2
-  flutter_launcher_icons: ^0.11.0
+  flutter_launcher_icons: ^0.12.0
   flutter_test:
     sdk: flutter
   
@@ -124,6 +130,5 @@ dependency_overrides:
 flutter:
   assets:
     - assets/images/
-    - assets/images/onboard/
 
   uses-material-design: true
