--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,8 +43,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   qr_code_tools: ^0.0.7
   qr_flutter: ^4.0.0
-  touchable: ^1.0.2
-  responsive_builder: ^0.6.0
+ # responsive_builder: ^0.6.0
   screenshot: ^1.3.0
   share_plus: ^6.3.0
   intl: ^0.18.0
@@ -65,17 +64,18 @@ dependencies:
   alphabet_list_view: ^0.1.7
   
   #dotted_border: ^2.0.0+2
-#  flutter_form_builder: ^7.8.0
+# flutter_form_builder: ^7.8.0
   #form_builder_extra_fields: ^8.3.0
  # form_builder_image_picker: ^3.1.0
 #  form_builder_validators: ^8.5.0
   flutter_colorpicker: ^1.0.3
   image_cropper: ^3.0.1
   loader_overlay: ^2.1.0
-  mask_text_input_formatter: ^2.4.0
-  modal_bottom_sheet: ^2.0.1
-  proste_bezier_curve: ^2.0.2
-  awesome_select: ^6.0.0
+ # mask_text_input_formatter: ^2.4.0
+  #modal_bottom_sheet: ^2.0.1
+  #proste_bezier_curve: ^2.0.2
+  #touchable: ^1.0.2
+  #awesome_select: ^6.0.0
   cached_network_image: ^3.2.0
 #ROUTING
   auto_route: ^5.0.4
@@ -110,7 +110,7 @@ dev_dependencies:
   build_runner: ^2.3.2
   reactive_forms_generator: ^1.0.0
   freezed: ^2.0.3
-  json_serializable: ^6.1.4
+  json_serializable: ^6.6.1
   analyzer: ^5.1.0
   auto_route_generator: ^5.0.3
   dependency_validator: ^3.1.2
