--- a/.json_models/4 digital_card.jsonc
+++ b/.json_models/4 digital_card.jsonc
@@ -5,9 +5,9 @@
   "user_id": 1,
   "owner_id": 1,
   "title" : "Programmer",
-  "logo_image" : "ffff",
+  "logo_url" : "ffff",
   "color" : 1,
-  "profile_image" : "ffff",
+  "avatar_url" : "ffff",
   "prefix" : "Mark Dionnie",
   "first_name" : "Mark Dionnie",
   "middle_name" : "Mark Dionnie",
