--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,7 +106,9 @@ dependencies:
   fluentui_system_icons: ^1.1.198
 
   flutter_contacts: ^1.1.6
-  supabase_flutter: ^1.5.0
+
+  supabase_flutter: ^1.6.2
+  
   otp_text_field: ^1.1.3
 
 dev_dependencies:
@@ -124,6 +126,7 @@ dev_dependencies:
 dependency_overrides:
   image_picker_android: 0.8.4+13
   flutter_lints: ^2.0.1
+  storage_client: ^1.2.5
 
 flutter:
   assets:
