--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
     sdk: flutter
   
   flutter_keyboard_visibility: ^5.4.0
-  flutter_native_splash: ^2.2.13
+  flutter_native_splash: ^2.2.19
   google_fonts: ^4.0.3
   http: ^0.13.4
   http_interceptor: ^2.0.0-beta.5
@@ -110,6 +110,7 @@ dependencies:
   supabase_flutter: ^1.6.2
   
   otp_text_field: ^1.1.3
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   build_runner: ^2.3.2
@@ -126,7 +127,6 @@ dev_dependencies:
 dependency_overrides:
   image_picker_android: 0.8.4+13
   flutter_lints: ^2.0.1
-  storage_client: ^1.2.5
 
 flutter:
   assets:
