--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   qr_code_tools: ^0.0.7
   qr_flutter: ^4.0.0
  # responsive_builder: ^0.6.0
+  flutter_cache_manager: ^3.3.0
+  universal_io: ^2.2.0
+  mime: ^1.0.4
   screenshot: ^1.3.0
   share_plus: ^6.3.0
   intl: ^0.18.0
