--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   http_parser: ^4.0.1
   image_gallery_saver: ^1.7.1
   image_picker: ^0.8.5+3
-  image_picker_web: ^3.0.0+1
+  image_picker_for_web: ^2.1.12
   qr_code_scanner: ^1.0.1
   qr_code_tools: ^0.0.7
   qr_flutter: ^4.0.0
