--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
  # responsive_builder: ^0.6.0
   flutter_cache_manager: ^3.3.0
   universal_io: ^2.2.0
+  universal_html: ^2.2.1
   mime: ^1.0.4
   screenshot: ^1.3.0
   share_plus: ^6.3.0
