--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -118,6 +118,7 @@ dependencies:
   
   otp_text_field: ^1.1.3
   jwt_decode: ^0.3.1
+  uni_links: ^0.5.1
 
 dev_dependencies:
   build_runner: ^2.3.2
