--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,8 @@ dependencies:
  
   flutter:
     sdk: flutter
-  
+  flutter_web_plugins:
+    sdk: flutter
   flutter_keyboard_visibility: ^5.4.0
   flutter_native_splash: ^2.2.19
   google_fonts: ^4.0.3
@@ -64,7 +65,6 @@ dependencies:
   faker: ^2.0.0
   collection: ^1.17.0
   azlistview: ^2.0.0
-  meta_seo: ^3.0.5
 
 #UI
   font_awesome_flutter: ^10.3.0
@@ -79,45 +79,19 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   image_cropper: ^3.0.3
   loader_overlay: ^2.2.0
- # mask_text_input_formatter: ^2.4.0
-  #modal_bottom_sheet: ^2.0.1
-  #proste_bezier_curve: ^2.0.2
-  #touchable: ^1.0.2
-  #awesome_select: ^6.0.0
   cached_network_image: ^3.2.0
-#ROUTING
   auto_route: ^7.2.0
-#STACKED
   stacked: ^3.2.0
   stacked_generator: ^1.0.0
   stacked_services: ^1.0.0
   stacked_themes: ^0.3.9
-#UTILS
-#  string_validator: ^0.3.0
-#  timeago: ^3.2.2
-#  percent_indicator: ^4.0.0
-#  permission_handler: ^10.2.0
-#  flutter_staggered_grid_view: ^0.6.2
-#  flutter_widget_from_html: ^0.10.0
-#  flutter_map: ^3.1.0
-#  transparent_image: ^2.0.0
-#  validators: ^3.0.0
-#  scrollable_positioned_list: ^0.3.2
-#  latlong2: ^0.8.1
   freezed_annotation: ^2.0.3
   json_annotation: ^4.6.0
   reactive_forms: ^14.2.0
   reactive_forms_annotations: ^1.0.0
   reactive_image_picker: ^0.13.0
-  internet_connection_checker: ^1.0.0+1
-
-  fluentui_system_icons: ^1.1.198
-
   flutter_contacts: ^1.1.6
-
   supabase_flutter: ^1.6.2
-  
-  otp_text_field: ^1.1.3
   jwt_decode: ^0.3.1
   uni_links: ^0.5.1
 
