--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ dependencies:
 #UI
   font_awesome_flutter: ^10.3.0
   alphabet_list_view: ^0.1.7
+  auto_size_text: ^3.0.0
+  drop_shadow: ^0.1.0
  # alphabet_list_view:
     # path: ./alphabet_list_view-override
   #dotted_border: ^2.0.0+2
