--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,25 +1,36 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "digicard",
-            "request": "launch",
-            "type": "dart"
-        },
-        {
-            "name": "digicard (profile mode)",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "profile"
-        },
-        {
-            "name": "digicard (release mode)",
-            "request": "launch",
-            "type": "dart",
-            "flutterMode": "release"
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    
+
+    {
+      "name": "digicard",
+      "request": "launch",
+      "type": "dart",
+      "args": [
+        "-d", "chrome", 
+        "--web-port", "8000"]
+    },
+    {
+      "name": "digicard (profile mode)",
+      "request": "launch",
+      "type": "dart",
+      "flutterMode": "profile",
+      "args": [
+        "-d", "chrome", 
+        "--web-port", "8001"]
+    },
+    {
+      "name": "digicard (release mode)",
+      "request": "launch",
+      "type": "dart",
+      "flutterMode": "release",
+      "args": [
+        "-d", "chrome", 
+        "--web-port", "8002"]
+    }
+  ]
 }
