--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
+  envied: ^0.3.0+3
+  
   flutter_keyboard_visibility: ^5.4.0
   flutter_native_splash: ^2.2.19
   google_fonts: ^4.0.3
@@ -104,6 +106,7 @@ dev_dependencies:
   json_serializable: ^6.6.1
   analyzer: ^5.1.0
   auto_route_generator: ^7.1.1
+  envied_generator: ^0.3.0+3
   dependency_validator: ^3.1.2
   flutter_launcher_icons: ^0.12.0
   flutter_test:
