--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,10 +67,11 @@ dependencies:
   faker: ^2.0.0
   collection: ^1.17.0
   azlistview: ^2.0.0
+  cached_memory_image: ^1.3.1
 
 #UI
   font_awesome_flutter: ^10.3.0
-  alphabet_list_view: ^0.1.7
+  alphabet_list_view: ^0.1.10
   auto_size_text: ^3.0.0
   drop_shadow: ^0.1.0
  # alphabet_list_view:
