--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   collection: ^1.17.0
   azlistview: ^2.0.0
   cached_memory_image: ^1.3.1
+  permission_handler: ^10.4.3
 
 #UI
   font_awesome_flutter: ^10.3.0
