--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,23 +37,23 @@ dependencies:
   
   flutter_keyboard_visibility: ^5.4.0
   flutter_native_splash: ^2.2.19
-  google_fonts: ^4.0.3
-  http: ^0.13.4
+  google_fonts: ^6.1.0
+  http: ^1.1.0
   http_interceptor: ^2.0.0-beta.5
   http_parser: ^4.0.1
-  image_gallery_saver: ^1.7.1
-  image_picker: ^0.8.5+3
-  image_picker_for_web: ^2.1.12
+  image_gallery_saver: ^2.0.3
+  image_picker: ^1.0.4
+  image_picker_for_web: ^3.0.1
   qr_code_scanner: ^1.0.1
  # qr_code_tools: ^0.0.7
-  qr_flutter: ^4.0.0
+  qr_flutter: ^4.1.0
  # responsive_builder: ^0.6.0
   flutter_cache_manager: ^3.3.0
   universal_io: ^2.2.0
   universal_html: ^2.2.1
   mime: ^1.0.4
   screenshot: ^2.1.0
-  share_plus: ^6.3.0
+  share_plus: ^7.1.0
   intl: ^0.18.0
   rename: ^2.0.1
   shared_preferences: ^2.0.13
@@ -68,11 +68,11 @@ dependencies:
   collection: ^1.17.0
   azlistview: ^2.0.0
   cached_memory_image: ^1.3.1
-  permission_handler: ^10.4.3
+  permission_handler: ^11.0.1
 
 #UI
   font_awesome_flutter: ^10.3.0
-  alphabet_list_view: ^0.1.10
+  alphabet_list_view: ^1.0.0
   auto_size_text: ^3.0.0
   drop_shadow: ^0.1.0
  # alphabet_list_view:
@@ -83,10 +83,10 @@ dependencies:
  # form_builder_image_picker: ^3.1.0
 #  form_builder_validators: ^8.5.0
   flutter_colorpicker: ^1.0.3
-  image_cropper: ^3.0.3
+  image_cropper: ^5.0.0
   loader_overlay: ^2.2.0
   cached_network_image: ^3.2.0
-  auto_route: ^7.2.0
+  auto_route: ^7.8.4
   stacked: ^3.4.1
   stacked_services: ^1.2.0
   stacked_themes: ^0.3.12
@@ -95,9 +95,9 @@ dependencies:
   reactive_forms: ^16.0.0
   reactive_date_time_picker: ^3.0.0
   reactive_forms_annotations: ^4.0.0
-  reactive_image_picker: ^4.0.1
+  reactive_image_picker: ^5.0.0
   flutter_contacts: ^1.1.6
-  supabase_flutter: ^1.6.2
+  supabase_flutter: ^1.10.22
   jwt_decode: ^0.3.1
   uni_links: ^0.5.1
 
@@ -108,10 +108,10 @@ dev_dependencies:
   freezed: ^2.3.5
   json_serializable: ^6.7.1
   analyzer: ^5.1.0
-  auto_route_generator: ^7.1.1
+  auto_route_generator: ^7.3.2
   envied_generator: ^0.3.0+3
   dependency_validator: ^3.1.2
-  flutter_launcher_icons: ^0.12.0
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
   
@@ -122,6 +122,7 @@ dependency_overrides:
 flutter:
   assets:
     - assets/images/
+    - assets/icons/
     - google_fonts/
 
   uses-material-design: true
