--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,8 +87,8 @@ dependencies:
   loader_overlay: ^2.3.2
   cached_network_image: ^3.2.0
   auto_route: ^7.8.4
-  stacked: ^3.4.1
-  stacked_services: ^1.2.0
+  stacked: ^3.4.1+1
+  stacked_services: ^1.3.0
   stacked_themes: ^0.3.12
   freezed_annotation: ^2.0.3
   json_annotation: ^4.8.1
@@ -103,7 +103,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.3.2
-  stacked_generator: ^1.4.0
+  stacked_generator: ^1.5.1
   reactive_forms_generator: ^4.0.0
   freezed: ^2.3.5
   json_serializable: ^6.7.1
