--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ dependencies:
   stacked: ^3.4.0
   stacked_services: ^1.1.0
   stacked_themes: ^0.3.12
-  envied: ^0.3.0+3
-  flutter_keyboard_visibility: ^5.4.0
+  envied: ^0.5.4+1
+  flutter_keyboard_visibility: ^6.0.0
   flutter_native_splash: ^2.2.19
   google_fonts: ^6.1.0
   http: ^1.1.0
@@ -28,35 +28,35 @@ dependencies:
   universal_io: ^2.2.0
   universal_html: ^2.2.1
   mime: ^1.0.4
-  screenshot: ^2.1.0
-  share_plus: ^7.1.0
-  intl: ^0.18.0
-  rename: ^2.0.1
+  screenshot: ^3.0.0
+  share_plus: ^9.0.0
+  intl: ^0.19.0
+  rename: ^3.0.2
   shared_preferences: ^2.0.13
-  logger: ^1.1.0
+  logger: ^2.4.0
   path: ^1.8.2
   path_provider: ^2.0.11
   validators: ^3.0.0
   equatable: ^2.0.3
   url_launcher: ^6.1.2
-  uuid: ^3.0.7
+  uuid: ^4.4.2
   faker: ^2.0.0
   collection: ^1.17.0
   cached_memory_image: ^1.3.1
   permission_handler: ^11.0.1
   font_awesome_flutter: ^10.3.0
   auto_size_text: ^3.0.0
-  loader_overlay: ^2.3.2
+  loader_overlay: ^4.0.0
   cached_network_image: ^3.2.0
   image_downloader_web: ^2.0.4
   freezed_annotation: ^2.0.3
   json_annotation: ^4.8.1
-  reactive_forms: ^16.0.2
+  reactive_forms: 17.0.1
+  reactive_forms_annotations: 5.0.0
   reactive_date_time_picker: ^3.0.0
-  reactive_forms_annotations: ^4.0.0
   reactive_image_picker: ^5.0.0
   flutter_contacts: ^1.1.7+1
-  supabase_flutter: ^1.10.22
+  supabase_flutter: ^2.5.8
   uni_links: ^0.5.1
   fluttertoast: ^8.2.4
   another_transformer_page_view: ^2.0.1
@@ -76,13 +76,13 @@ dev_dependencies:
   build_runner: ^2.4.5
   flutter_lints: ^2.0.0
   mockito: ^5.4.1
-  stacked_generator: ^1.3.3
-  reactive_forms_generator: ^4.0.0
+  stacked_generator: ^2.0.0-pre.1
+  reactive_forms_generator: 5.0.4
   freezed: ^2.3.5
   json_serializable: ^6.7.1
-  analyzer: ^5.1.0
-  envied_generator: ^0.3.0+3
-  dependency_validator: ^3.1.2
+  analyzer: ^6.4.1
+  envied_generator: ^0.5.4+1
+  dependency_validator: ^4.1.0
   flutter_launcher_icons: ^0.13.1
 
   flutter_test:
